# Gingko

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  projects_realtime  qtcsettings.cmake  realtime.cpp  submission-realtime.md
.cmake/api/v1/reply/: cache-v2-cb14556fadca83a925fd.json  cmakeFiles-v1-b898d0d56285a849ee8f.json  (+8 more)
.cmake/api/v1/reply.prev/: cache-v2-2103099b78af63a88625.json  cmakeFiles-v1-cb5653f267cd81b681a6.json  target-StaticGLEW-Debug-ae959fd7ec26e20edd12.json  target-projects_realtime-Debug-e03fbf1b86cda629cd4b.json
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.qt/rcc/: Resources.qrc  qrc_Resources.cpp
.qtc_clangd/: compile_commands.json
StaticGLEW_autogen/: deps
glm/: cmake_install.cmake
projects_realtime_autogen/: deps
projects_realtime_autogen/OWQMYEJWPR/: moc_aspectratiowidget.cpp.d
projects_realtime_autogen/UVLADIE3JM/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
resources/shaders/: default.frag  default.vert  gradient.frag  gradient.vert
src/: canvas2d.cpp  canvas2d.h  lightmodel.cpp  lightmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  param.h  realtime.cpp  realtime.h  reflectionsampler.cpp  reflectionsampler.h
src/camera/: camera.cpp  camera.h
src/final/: KDTree3D.cpp  KDTree3D.h  venation.cpp  venation.h
src/shapes/: BezierRing.cpp  BezierRing.h  Cone.cpp  Cone.h  Cube.cpp  Cylinder.cpp  Cylinder.h  ShapeMeshes.cpp  ShapeMeshes.h  Sphere.cpp  Tet.cpp  Triangle.cpp
src/utils/: scenedata.h  sceneparser.cpp
(+592 files in other folders)
